# pykaraoke-ng

./: .coveragerc  .gitignore  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT_REPORT.md  DOCKER_INTEGRATION_ARCHITECTURE.md  DOCUMENTATION_REPORT.md  E2E_REPORT.md  INTEGRATION_TESTS_QUICK_REF.md  MIGRATION_GUIDE.md  Makefile  PR_SUMMARY.md  QUALITY_IMPROVEMENT_SUMMARY.md  QUICKSTART.md  README.md  README.txt  RELEASE_READINESS.md  RELIABILITY_REPORT.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_PLAN.md  REORGANIZATION_SUMMARY.md  RUST_MIGRATION_PLAN.md  SECURITY_REPORT.md  SONARCLOUD_HIGH_ISSUES_FIXED.md  SONARQUBE_FIXES.md  STRUCTURE.md  build.ps1  coverage.json  docker-compose.yml  performer_prompt.py  pycdg.py  pycdgAux.py  pykar.py  pykaraoke.py  pykaraoke_mini.py  pykbackend.py  pykconstants.py  pykdb.py  pykenv.py  pykmanager.py  (+8 more)
.github/: CODEOWNERS
.github/workflows/: ci-cd.yml  pages.yml  sonarqube.yml
crates/pykaraoke-engine/: Cargo.toml
crates/pykaraoke-engine/src/: audio_player.rs  backend.rs  database.rs  discovery.rs  engine.rs  engine_impl.rs  event_bus.rs  filename_parser.rs  lib.rs  library.rs  midi_player.rs  player.rs  queue.rs  song.rs
crates/pykaraoke-engine/src/format/: cdg.rs  cdg_decoder.rs  kar.rs  kar_parser.rs  mod.rs  mpg.rs
crates/pykaraoke-engine/src/views/: cdg_frame_view.rs  error_view.rs  library_view.rs  lyrics_view.rs  mod.rs  playback_view.rs  queue_view.rs  search_view.rs  settings_view.rs  song_view.rs
deploy/docker/: .dockerignore  Dockerfile  docker-compose.yml  nginx.conf
deploy/install/linux/: pycdg  pykar  pykaraoke  pykaraoke_mini  pympg
deploy/install/windows/: installer.nsi
deploy/kubernetes/: deployment.yaml  kind-config.yaml  namespace.yaml
docs/: IMPLEMENTATION_COMPLETE.md  INTEGRATION_TESTS_SETUP.md  SCRIPT_UNIFICATION_COMPLETE.md  _config.yml  administrators.md  backend-modes.md  developers.md  implementation-summary.md  index.md  quickstart.md  users.md
docs/architecture/: ARCHITECTURE.md  migration-guide.md  next-steps.md  overview.md  reorganization-complete.md  reorganization-plan.md  reorganization-summary.md  reorganization.md  structure.md
docs/architecture/specs/: INTERFACE_SPEC.md  README.md  build-system-invariants.md  constitution.md  ux-design.md
docs/development/: integration-testing.md  pr-summary.md  quality-improvements.md  sonarcloud-high-issues-fixed.md  sonarqube-87-issues-fixed.md  sonarqube-fixes.md  sonarqube-setup.md
docs/issues/: README.md  deb-buttons-not-working.md  fast-forward-rewind-not-working.md  legacy-issues.md  playback-controls-fixes.md  webkit-dmabuf-empty-window.md
docs/reports/: BUILD_AND_TEST_PLAN.md  BUILD_AUDIT.md  BUILD_PIPELINE_AUDIT.md  CICD_REPORT.md  CI_FAILURE_ANALYSIS.md  DEFECT_ANALYSIS.md  DOCUMENTATION_AUDIT.md  DOCUMENTATION_PLAN.md  E2E_FAILURE_ANALYSIS.md  FINAL_BUILD_REPORT.md  FINAL_CI_REPORT.md  GITHUB_ACTIONS_AUDIT.md  INTERFACE_MIGRATION.md  PHASED_MIGRATION_PLAN.md  PYTHON_DEPENDENCY_AUDIT.md  RELEASE_READINESS.md  RUST_COMPATIBILITY_REPORT.md  RUST_FIRST_ARCHITECTURE.md  RUST_MIGRATION_PLAN.md  SECURITY_REPORT.md  SKIPPED_TESTS_REPORT.md  SONAR_FIX_REPORT.md  TEST_REPORT.md
electron/: index.html  main.js  renderer.js  styles.css
scripts/: README.md  kind-setup.sh  run-tests.sh  setup-dev-env.sh  test-utils.sh  troubleshooting-tests.md  validate-before-refactor.sh  validate-refactor.sh
specs/: README.md  build-system-invariants.md  constitution.md  workflow.md
specs/ci/: Validate-SpecCompletion.ps1  new-feature.sh  validate-spec-completion.sh
specs/features/001-filename-parser-edge-cases/: checklist.md  clarify.md  spec.md
specs/features/002-slim-sidebar-layout/: checklist.md  plan.md
specs/templates/: clarification.md  task-breakdown.md  technical-plan.md
src/pykaraoke/: __init__.py
src/pykaraoke/application/: __init__.py  karaoke_manager.py  library_service.py  playback_service.py
src/pykaraoke/config/: __init__.py  environment.py
src/pykaraoke/core/: __init__.py  backend.py  database.py  filename_parser.py  manager.py  player.py
src/pykaraoke/domain/: __init__.py  performer.py  queue.py  song.py
src/pykaraoke/infrastructure/: __init__.py
src/pykaraoke/interfaces/: __init__.py  backend_api.py
src/pykaraoke/legacy/: __init__.py  pykaraoke.py  pykaraoke_mini.py
src/pykaraoke/players/: __init__.py  cdg.py  cdg_aux.py  kar.py  mpg.py
src/runtimes/electron/: main.js  package.json  preload.js
src/runtimes/tauri/: README.md  backend.spec
src/runtimes/tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src/runtimes/tauri/src-tauri/backend/: .gitignore
src/runtimes/tauri/src-tauri/backend/pykaraoke/: PLACEHOLDER  __init__.py
src/runtimes/tauri/src-tauri/backend/pykaraoke/config/: environment.py
src/runtimes/tauri/src-tauri/backend/pykaraoke/core/: backend.py  database.py  filename_parser.py  manager.py  performer_prompt.py
src/runtimes/tauri/src-tauri/backend/pykaraoke/players/: __init__.py  kar.py
src/runtimes/tauri/src-tauri/icons/: icon.icns
src/runtimes/tauri/src-tauri/src/: commands.rs  main.rs  tauri_event_bus.rs
tauri-app/: README.md
tauri-app/src/: index.html  styles.css
tauri-app/src-tauri/: tauri.conf.json
tauri-app/src-tauri/src/: main.rs
tests/: __init__.py  conftest.py  test_backend_api.py  test_cdg_format.py  test_end_to_end.py  test_file_parsing.py  test_midi_format.py  test_pykconstants.py  test_pykenv.py  test_pykversion.py  test_settings.py
tests/compat/: __init__.py  conftest.py  test_backend_compat.py  test_filename_parser_compat.py  test_player_compat.py  test_queue_compat.py
tests/integration/: __init__.py  test_end_to_end.py  test_tauri_packaging.py  test_ui_buttons.py
tests/manual/: test_backend_modes.py
tests/pykaraoke/: __init__.py  test_settings.py  test_ui_layout.py
tests/pykaraoke/config/: __init__.py  test_constants.py  test_environment.py  test_version.py
tests/pykaraoke/core/: test_backend_api.py  test_backend_comprehensive.py  test_backend_http.py  test_database.py  (+17 more)
tests/validation/: conftest.py  test_artifact_backend.py  test_artifact_installer.py
(+71 files in other folders)
