[project]
name = "pykaraoke-ng"
version = "0.7.5"
description = "PyKaraoke - CD+G/MPEG/KAR Karaoke Player (Next Generation)"
readme = "README.md"
license = { text = "LGPL-2.1-or-later" }
requires-python = ">=3.10"
authors = [
    { name = "Kelvin Lawson", email = "kelvinl@users.sourceforge.net" },
    { name = "PyKaraoke Development Team" },
]
maintainers = [
    { name = "PyKaraoke-NG Contributors" },
]
keywords = ["karaoke", "cdg", "midi", "kar", "mpeg", "music", "player"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Multimedia :: Video :: Display",
]

dependencies = [
    "pygame>=2.5.0",
    "numpy>=1.24.0",
    "mutagen>=1.47.0",
]

[project.optional-dependencies]
http = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "selenium>=4.15.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]
all = [
    "pykaraoke-ng[http,dev,test,docs]",
]

[project.urls]
Homepage = "https://github.com/wilsonify/pykaraoke-ng"
Documentation = "https://github.com/wilsonify/pykaraoke-ng#readme"
Repository = "https://github.com/wilsonify/pykaraoke-ng.git"
Issues = "https://github.com/wilsonify/pykaraoke-ng/issues"
Changelog = "https://github.com/wilsonify/pykaraoke-ng/blob/main/ChangeLog"

[project.scripts]
pycdg = "pykaraoke.players.cdg:main"
pykar = "pykaraoke.players.kar:main"
pympg = "pykaraoke.players.mpg:main"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pykaraoke"]
exclude = [
    "tests/",
    "scripts/",
    "install/",
    "deploy/",
    "icons/*.xcf",
    "*.c",
    ".git/",
    ".venv/",
    "__pycache__/",
    "*.pyc",
]

[tool.hatch.build.targets.sdist]
exclude = [
    ".git/",
    ".venv/",
    "__pycache__/",
    "*.pyc",
    "htmlcov/",
    ".coverage",
    ".pytest_cache/",
]

# UV Configuration
[tool.uv.sources]
# Add any custom package sources here if needed

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "selenium>=4.15.0",
]

# Ruff Configuration (modern Python linter/formatter)
[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "electron/node_modules",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "W191",   # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["pykaraoke", "pycdg", "pykar", "pympg", "pykdb"]

# Pytest Configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_pygame: marks tests that require pygame",
    "requires_display: marks tests that require a display",
    "integration: marks integration tests",
    "e2e: marks end-to-end tests",
]

# Coverage Configuration
[tool.coverage.run]
source = ["."]
branch = true
omit = [
    ".venv/*",
    "tests/*",
    "setup.py",
    "*/__pycache__/*",
    "electron/*",
    "k8s/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "htmlcov"

# MyPy Configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "^.venv/",
    "^tests/",
    "^electron/",
]
