[package]
name = "pykaraoke-engine"
version = "0.7.5"
description = "PyKaraoke NG — Rust karaoke engine"
authors = ["PyKaraoke Development Team"]
license = "LGPL-2.1-or-later"
repository = "https://github.com/wilsonify/pykaraoke-ng"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
regex = "1"
once_cell = "1.19"
dirs = "5.0"

[dev-dependencies]
tempfile = "3"
