[package]
name = "pykaraoke-ng"
version = "0.7.5"
description = "PyKaraoke - CD+G/MPEG/KAR Karaoke Player (Tauri Edition)"
authors = ["PyKaraoke Development Team"]
license = "LGPL-2.1-or-later"
repository = "https://github.com/wilsonify/pykaraoke-ng"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.8", features = ["shell-open", "dialog-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
